--- a/frontend/index.html
+++ b/frontend/index.html
@@ -6,9 +6,43 @@
     <link rel="icon" type="image/svg+xml" href="/fav.png"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <title>LomTechnology</title>
+    <style>
+        body {
+            margin: 0;
+        }
+
+        .splash-img {
+            animation: an-bounce 1s linear infinite;
+        }
+
+        @keyframes an-bounce {
+            from {
+                transform: scale(.7);
+            }
+            50% {
+                transform: scale(1);
+            }
+            to {
+                transform: scale(.7);
+            }
+        }
+    </style>
 </head>
-<body>
-<div id="app-layout"></div>
+<body
+>
+<div id="app-layout">
+    <div class=""
+         style="height: 100vh;
+          overflow: hidden;
+          width: 100vw; display: flex;
+             flex-direction: column;
+             font-weight: bolder;
+             justify-content: center;align-items: center;align-self: stretch"
+    >
+        <img class="splash-img" style="width: 8rem; height: 8rem; margin-bottom: .1rem" src="/fav.png" alt="">
+        LomTechnology
+    </div>
+</div>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-k6d4wzSIapyDyv1kpU366/PK5hCdSbCRGRCMv+eplOQJWyd1fbcAu9OCUj5zNLiq"
         crossOrigin="anonymous"></script>
